ListView: fix countChanged not being emitted in certain cases

This broke after 477c15def834bd49553c00b90f3a2006456ea931.
countChanged would have normally been emitted in the call to
applyModelChanges that we skipped after adding the q->size().isNull()
check.

We can check hasPendingChanges() to know if a count change
is pending (which is also the first thing applyModelChanges checks
before doing its work), and if so, emit countChanged so that
any bindings that are relying on it can function as expected.

Fixes: QTBUG-129165
Pick-to: 6.7 6.5
Change-Id: Ic045f1870b39d192f6880e23daab03fd73a16d58
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 0a1d8fb26d1e89c82a0d35dd728d7e928a94d197)
(cherry picked from commit 101df5c2c00c198c22fc75478a7be4056bcf6222)
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>